// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders with label 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: relative;
}

.c7 {
  margin-left: 4px;
  font: 400 12px/20px 'Roboto';
}

.c4 {
  pointer-events: none;
  width: 16px;
  height: 16px;
  overflow: hidden;
  border-radius: 3px;
  position: relative;
  display: block;
  box-sizing: border-box;
}

.c6 {
  fill: none;
  stroke-width: 2;
  stroke: #1785FB;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  stroke-dasharray: 48;
  stroke-dashoffset: 48;
  -webkit-transform: translate(2px,4px);
  -ms-transform: translate(2px,4px);
  transform: translate(2px,4px);
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-radius: 3px;
  border: 1px solid #D1D5D7;
  cursor: pointer;
  height: 16px;
  left: 0;
  margin: 0;
  padding: 0;
  position: absolute;
  top: 0;
  -webkit-transition: border 0.2s ease;
  transition: border 0.2s ease;
  width: 16px;
}

.c2:focus {
  outline: none;
  border: 2px solid #1785FB;
}

.c2:hover {
  border-color: #47DB99;
}

.c2:checked {
  border-color: #1785FB;
}

.c2:checked + .c3 .c5 {
  -webkit-animation: gGaDtf 0.3s cubic-bezier(0.65,0,0.45,1) 300ms forwards;
  animation: gGaDtf 0.3s cubic-bezier(0.65,0,0.45,1) 300ms forwards;
}

.c2:disabled {
  background-color: #F5F5F5;
  cursor: not-allowed;
  border-color: #D1D5D7;
}

.c2:disabled:checked + .c3 .c5 {
  stroke: #D1D5D7;
}

<label
  className="c0"
  htmlFor="test"
>
  <div
    className="c1"
  >
    <input
      checked={true}
      className="c2"
      disabled={false}
      id="test"
      name=""
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      className="c3 c4"
    >
      <polyline
        className="c5 c6"
        points="1.65093994 3.80255127 4.48919678 6.97192383 10.3794556 0.717346191"
      />
    </svg>
  </div>
  <div
    className="c7"
  >
    Hola
  </div>
</label>
`;

exports[`render renders without crashing 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: relative;
}

.c4 {
  pointer-events: none;
  width: 16px;
  height: 16px;
  overflow: hidden;
  border-radius: 3px;
  position: relative;
  display: block;
  box-sizing: border-box;
}

.c6 {
  fill: none;
  stroke-width: 2;
  stroke: #1785FB;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  stroke-dasharray: 48;
  stroke-dashoffset: 48;
  -webkit-transform: translate(2px,4px);
  -ms-transform: translate(2px,4px);
  transform: translate(2px,4px);
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-radius: 3px;
  border: 1px solid #D1D5D7;
  cursor: pointer;
  height: 16px;
  left: 0;
  margin: 0;
  padding: 0;
  position: absolute;
  top: 0;
  -webkit-transition: border 0.2s ease;
  transition: border 0.2s ease;
  width: 16px;
}

.c2:focus {
  outline: none;
  border: 2px solid #1785FB;
}

.c2:hover {
  border-color: #47DB99;
}

.c2:checked {
  border-color: #1785FB;
}

.c2:checked + .c3 .c5 {
  -webkit-animation: gGaDtf 0.3s cubic-bezier(0.65,0,0.45,1) 300ms forwards;
  animation: gGaDtf 0.3s cubic-bezier(0.65,0,0.45,1) 300ms forwards;
}

.c2:disabled {
  background-color: #F5F5F5;
  cursor: not-allowed;
  border-color: #D1D5D7;
}

.c2:disabled:checked + .c3 .c5 {
  stroke: #D1D5D7;
}

<label
  className="c0"
  htmlFor="test"
>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      disabled={false}
      id="test"
      name=""
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      className="c3 c4"
    >
      <polyline
        className="c5 c6"
        points="1.65093994 3.80255127 4.48919678 6.97192383 10.3794556 0.717346191"
      />
    </svg>
  </div>
</label>
`;

exports[`render uses htmlFor for the label, and adds it as the input id 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: relative;
}

.c4 {
  pointer-events: none;
  width: 16px;
  height: 16px;
  overflow: hidden;
  border-radius: 3px;
  position: relative;
  display: block;
  box-sizing: border-box;
}

.c6 {
  fill: none;
  stroke-width: 2;
  stroke: #1785FB;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  stroke-dasharray: 48;
  stroke-dashoffset: 48;
  -webkit-transform: translate(2px,4px);
  -ms-transform: translate(2px,4px);
  transform: translate(2px,4px);
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border-radius: 3px;
  border: 1px solid #D1D5D7;
  cursor: pointer;
  height: 16px;
  left: 0;
  margin: 0;
  padding: 0;
  position: absolute;
  top: 0;
  -webkit-transition: border 0.2s ease;
  transition: border 0.2s ease;
  width: 16px;
}

.c2:focus {
  outline: none;
  border: 2px solid #1785FB;
}

.c2:hover {
  border-color: #47DB99;
}

.c2:checked {
  border-color: #1785FB;
}

.c2:checked + .c3 .c5 {
  -webkit-animation: gGaDtf 0.3s cubic-bezier(0.65,0,0.45,1) 300ms forwards;
  animation: gGaDtf 0.3s cubic-bezier(0.65,0,0.45,1) 300ms forwards;
}

.c2:disabled {
  background-color: #F5F5F5;
  cursor: not-allowed;
  border-color: #D1D5D7;
}

.c2:disabled:checked + .c3 .c5 {
  stroke: #D1D5D7;
}

<label
  className="c0"
  htmlFor="test"
>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      disabled={false}
      id="test"
      name=""
      onChange={[Function]}
      type="checkbox"
    />
    <svg
      className="c3 c4"
    >
      <polyline
        className="c5 c6"
        points="1.65093994 3.80255127 4.48919678 6.97192383 10.3794556 0.717346191"
      />
    </svg>
  </div>
</label>
`;
